--- a/css/agency.css
+++ b/css/agency.css
@@ -74,8 +74,8 @@ section h3.section-subheading {
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  background-color: #0033cc !important;
+  border-color: #0033cc !important;
   color: white;
 }
 
@@ -84,13 +84,13 @@ section h3.section-subheading {
 }
 
 ::-moz-selection {
-  background: #00cc99
+  background: #3399ff
 ;
   text-shadow: none;
 }
 
 ::selection {
-  background: #00cc99
+  background: #3399ff
 ;
   text-shadow: none;
 }
@@ -649,7 +649,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #00cc99
+  border-color: #3399ff
 ;
   box-shadow: none;
 }
@@ -720,6 +720,6 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #00cc99
+  background-color: #3399ff
 ;
 }
